border was successfully added to captured image

--- a/app/src/main/res/layout/activity_image_capture.xml
+++ b/app/src/main/res/layout/activity_image_capture.xml
@@ -8,6 +8,9 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shapeableImageView"
+        android:padding="4dp"
+        app:strokeWidth="4dp"
+        app:strokeColor="#000000"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="80dp"
@@ -21,7 +24,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button_take_image"
+        android:id="@+id/btnCaptureImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
